Terraform/security-group.tf
resource "aws_security_group" "jenkins" {
  vpc_id      = aws_vpc.aws_vpc.id
  description = "Jenkins Security Group"
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Jenkins Security Group"
  }
}

resource "aws_security_group" "jenkins-agent" {
  vpc_id      = aws_vpc.aws_vpc.id
  description = "Jenkins-Agent Security Group"
   ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.aws_vpc_cidr]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Jenkins-Agent Security Group"
  }
}

resource "aws_security_group" "nexus" {
  vpc_id      = aws_vpc.aws_vpc.id
  description = "Nexus Security Group"
  ingress {
    from_port   = 8081
    to_port     = 8081
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
   ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.aws_vpc_cidr]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Nexus Security Group"
  }
}

resource "aws_security_group" "sonarqube" {
  vpc_id      = aws_vpc.aws_vpc.id
  description = "Sonarqube Security Group"
  ingress {
    from_port   = 9000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
   ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.aws_vpc_cidr]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Soarqube Security Group"
  }
}

resource "aws_security_group" "tomcat" {
  vpc_id      = aws_vpc.aws_vpc.id
  description = "Tomcat Security Group"
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
   ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.aws_vpc_cidr]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${format(jsondecode(data.http.ipinfo.body).ip)}/32"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "Tomcat Security Group"
  }
}
